--- a/apply.html
+++ b/apply.html
@@ -90,7 +90,11 @@
         </div>
     </center>
 
-
+    <script type="text/javascript">
+        var infolinks_pid = 2651428;
+        var infolinks_wsid = 0;
+    </script>
+    <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 
 </html>
