--- a/quests.html
+++ b/quests.html
@@ -10,8 +10,9 @@
     <link rel="shortcut icon" type="image/jpg" href="fav.jpg" />
     <link href="render.css" rel="stylesheet" type="text/css">
     <title>Kingdom Life</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/king.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/test.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
     <script src="js/bootstrap.js"></script>
@@ -46,18 +47,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Kingdom Life RPG</a>
+                <a class="navbar-brand" href="index.html">Kingdom Life MMORPG</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-
-                    <li><a href="about_us.html">About Us</a></li>
-                    <li><a href="staff.html">Staff</a></li>
-                    <li><a href="map/index.html">Map</a></li>
-                    <li><a href="gallery/gallery.html">Gallery</a></li>
+                    <li class="dropdown">
+                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Server/Staff Related <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="about_us.html">About us</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="staff.html">Staff</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="donate.html">Donate</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="map/index.html">Map</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="gallery/gallery.html">Gallery</a></li>
+                        </ul>
+                    </li>
                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
                     <li class="dropdown">
@@ -80,15 +90,32 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
     <center>
         <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
-            <h1>Hello, world!</h1>
-            <p>...</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <div class="container" style="height: 400px;">
+
+                <h1 style="color:white;">Kingdom Life</h1>
+                <p style="color:white;">Take back your kingdom</p>
+                <p><a class=" btn btn-primary btn-lg " href="apply.html " role="button ">Apply For Staff</a></p>
+            </div>
         </div>
     </center>
-
-
+    <script type="text/javascript">
+        var infolinks_pid = 2651428;
+        var infolinks_wsid = 0;
+    </script>
+    <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
+<footer style="background-color:#838383;">
+    <div class="row">
+
+        <div class="col-md-offset-2 col-md-2">
+            <h3>Need to talk to someone</h3> Email:support@kingdomlifemmo.com
+        </div>
+
+    </div>
+
+</footer>
 
 </html>
