--- a/spells.html
+++ b/spells.html
@@ -10,8 +10,9 @@
     <link rel="shortcut icon" type="image/jpg" href="fav.jpg" />
     <link href="render.css" rel="stylesheet" type="text/css">
     <title>Kingdom Life</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/king.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/test.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
     <script src="js/bootstrap.js"></script>
@@ -46,18 +47,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Kingdom Life RPG</a>
+                <a class="navbar-brand" href="index.html">Kingdom Life MMORPG</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-
-                    <li><a href="about_us.html">About Us</a></li>
-                    <li><a href="staff.html">Staff</a></li>
-                    <li><a href="map/index.html">Map</a></li>
-                    <li><a href="gallery/gallery.html">Gallery</a></li>
+                    <li class="dropdown">
+                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Server/Staff Related <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="about_us.html">About us</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="staff.html">Staff</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="donate.html">Donate</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="map/index.html">Map</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="gallery/gallery.html">Gallery</a></li>
+                        </ul>
+                    </li>
                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
                     <li class="dropdown">
@@ -80,60 +90,32 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
     <center>
         <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
-            <h1>Hello, world!</h1>
-            <p>...</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <div class="container" style="height: 400px;">
+
+                <h1 style="color:white;">Kingdom Life</h1>
+                <p style="color:white;">Take back your kingdom</p>
+                <p><a class=" btn btn-primary btn-lg " href="apply.html " role="button ">Apply For Staff</a></p>
+            </div>
         </div>
     </center>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 col-md-offset-1">
-                <h1>
-                Who we are    
-                </h1>
-                <p>
-                    The Kingdom of Danne- Once a thriving, prosperous and happy kingdom ruled by a kind and generous king. However, a dark force kidnapped him, filling the jovial land with evil monsters and dark magic. Will you help us find our King? Will you help save Danne? The server is currently in development, and is expected to be released soon. If you're interested in helping us out, apply today.
-                </p>
-            </div>
-            <div class="col-md-7">
-                <div class="img-container">
-                    <img src="assets/imgs/castle.png">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2 col-md-offset-2">
-                <h1>Quests</h1>
-                <p>Travel the map completing tons of custom quests, battling mobs and completing tasks to earn XP and emeralds in an attempt to level up and find clues to the King's whereabouts. Along the way, you'll encounter tons of Kingdom citizens, all of who need your help.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Weapons</h1>
-                <p>Battle endless numbers of mobs and compete in PVP dueling with our custom weapons. Each weapon is equipped with various damage levels, and are classified as common, uncommon, unique and rare. The higher level you are, the more powerful the weapons you'll unlock.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Dungeons</h1>
-                <p>Battle your way through multiple dungeons throughout the map. You'll have to fight, climb, parkour, and solve puzzles before fighting the boss at the end. If you're successful, you'll be awarded XP and emeralds.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Unique Features</h1>
-                <ul>
-                    <li>Pure custom plugins</li>
-                    <li>1000x1000 map to explore</li>
-                    <li>Leveling system & XP earning</li>
-                    <li>Magic spells, enchanted weapons and powerful armor</li>
-                    <li>Towns to discover</li>
-                    <li>Interactive storyline and lore</li>
-                    <li>Endless fun</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
+    <script type="text/javascript">
+        var infolinks_pid = 2651428;
+        var infolinks_wsid = 0;
+    </script>
+    <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
+<footer style="background-color:#838383;">
+    <div class="row">
+
+        <div class="col-md-offset-2 col-md-2">
+            <h3>Need to talk to someone</h3> Email:support@kingdomlifemmo.com
+        </div>
+
+    </div>
+
+</footer>
 
 </html>
