--- a/about_us.html
+++ b/about_us.html
@@ -46,18 +46,25 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Kingdom Life RPG</a>
+                <a class="navbar-brand" href="index.html">Kingdom Life MMORPG</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-
-                    <li><a href="about_us.html">About Us</a></li>
-                    <li><a href="staff.html">Staff</a></li>
-                    <li><a href="map/index.html">Map</a></li>
-                    <li><a href="gallery/gallery.html">Gallery</a></li>
+                    <li class="dropdown">
+                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Server/Staff Related <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="about_us.html">About us</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="donate.html">Donate</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="map/index.html">Map</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="gallery/gallery.html">Gallery</a></li>
+                        </ul>
+                    </li>
                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
                     <li class="dropdown">
