--- a/features.html
+++ b/features.html
@@ -46,34 +46,32 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Kingdom Life RPG</a>
+                <a class="navbar-brand" href="index.html">Kingdom Life MMORPG</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-
-                    <li><a href="about_us.html">About Us</a></li>
-                    <li><a href="staff.html">Staff</a></li>
-                    <li><a href="map/index.html">Map</a></li>
-                    <li><a href="gallery/gallery.html">Gallery</a></li>
-                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
-                    <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
                     <li class="dropdown">
-                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
+                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Server/Staff Related <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="gear.html">Armor and Weapons</a></li>
+                            <li><a href="about_us.html">About us</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="towns.html">Towns</a></li>
+                            <li><a href="donate.html">Donate</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="dungeons.html">Dungeons</a></li>
+                            <li><a href="map/index.html">Map</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="spells.html">Spells</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="quests.html">Quests</a></li>
+                            <li><a href="gallery/gallery.html">Gallery</a></li>
                         </ul>
                     </li>
+                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
+                    <li><a href="forum/">Features</a></li>
+                    <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
+                    <li><a href="features.html">Features</a></li>
+
+
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -89,49 +87,89 @@
             <br />
         </div>
     </center>
-    <div class="row">
-        <div class="col-md-3 col-md-offset-1">
-            <h3>Custom Dungeons</h3>
-        </div>
-        <div class="col-md-7">
-            <p>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfdsaf</p>
-            <!---Insert Img or Video --->
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-7 col-md-offset-1">
-            <h3>Custom Towns</h3>
-        </div>
-        <div class="col-md-3">
-            <p>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfdsaf</p>
-            <!---Insert Img or Video --->
+
+
+    <div class="container-fluid">
+        <div class="row">
+            <center>
+                <div class="col-md-offset-4 col-md-3">
+                    <h1>
+           Towns
+                </h1>
+                    <p>
+                        Once King Gabriel was kidnapped, the land of Danne fell to ruin. Civilization seemed to crumble right along with the walls of the many glorious cities in Danne. Under Prince Traeton's leadership, the towns began to regroup and rebuild- each focusing on a particular area to the future success of Danne. Visit one of the many towns in Danne to experience each ones unique atmosphere, culture and way of life.
+                </div>
+            </center>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-3 col-md-offset-1">
-            <h3>Spells</h3>
-        </div>
-        <div class="col-md-7">
-            <p>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfdsaf</p>
-            <!---Insert Img or Video --->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 col-md-offset-2">
+                <h1>King Gaebriel's Castle</h1>
+                <p>Residence to His Heinousness Prince Traeton, King Gaebriel's Castle greets newcomers to Danne with its massive vault of weapons and defense. Villagers enjoy complete and total protection through the thick walls and high security.</p>
+            </div>
+            <div class="col-md-2">
+                <h1>Du'berville</h1>
+                <p>With the central focus on Agriculture, Du'berville contributes to the success of Danne by harvesting crops and caring and raising livestock. </p>
+            </div>
+            <div class="col-md-2">
+                <h1>Insert Name</h1>
+                <p>______ has one priority, and that is commerce. Villagers offer unique trades in exchange for emeralds, and players come to ______ to offer their goods and services, too.</p>
+            </div>
+            <div class="col-md-2">
+                <h1>Insert Name</h1>
+                <p>Containing the harbor that houses Danne's fleet of vessels, the port town of ______ supports Danne through fishing and helping protect Danne from evil monsters that might arise from the Great Ocean.</p>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-7 col-md-offset-1">
-            <h3>Quests</h3>
-        </div>
-        <div class="col-md-3">
-            <p>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfdsaf</p>
-            <!---Insert Img or Video --->
+    <div class="container-fluid">
+        <div class="row">
+            <center>
+                <div class="col-md-offset-4 col-md-3">
+                    <h1>
+           Spells
+                </h1>
+                    <p>
+                        Once King Gabriel was kidnapped, the land of Danne fell to ruin. Civilization seemed to crumble right along with the walls of the many glorious cities in Danne. Under Prince Traeton's leadership, the towns began to regroup and rebuild- each focusing on a particular area to the future success of Danne. Visit one of the many towns in Danne to experience each ones unique atmosphere, culture and way of life.
+                </div>
+            </center>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-3 col-md-offset-1">
-            <h3>Armor and Weapons</h3>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 col-md-offset-2">
+                <h1>King Gaebriel's Castle</h1>
+                <p>Residence to His Heinousness Prince Traeton, King Gaebriel's Castle greets newcomers to Danne with its massive vault of weapons and defense. Villagers enjoy complete and total protection through the thick walls and high security.</p>
+            </div>
+            <div class="col-md-2">
+                <h1>Du'berville</h1>
+                <p>With the central focus on Agriculture, Du'berville contributes to the success of Danne by harvesting crops and caring and raising livestock. </p>
+            </div>
+            <div class="col-md-2">
+                <h1>Insert Name</h1>
+                <p>______ has one priority, and that is commerce. Villagers offer unique trades in exchange for emeralds, and players come to ______ to offer their goods and services, too.</p>
+            </div>
+            <div class="col-md-2">
+                <h1>Insert Name</h1>
+                <p>Containing the harbor that houses Danne's fleet of vessels, the port town of ______ supports Danne through fishing and helping protect Danne from evil monsters that might arise from the Great Ocean.</p>
+            </div>
         </div>
-        <div class="col-md-7">
-            <p>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfdsaf</p>
-            <!---Insert Img or Video --->
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <center>
+                <div class="col-md-offset-4 col-md-3">
+                    <h1>
+           Armor and Weapons
+                        
+                </h1>
+                    <p>KingdomLife offers hundreds of weapons and armor types to collect- each with unique damage levels and abilities. The higher level you are, the more powerful weapons you'll be able to unlock. ​Enhance your weapons by applying effects. Effects can range from bonus loot to extra mana or even extra XP. The possibilities are endless.</p>
+
+                </div>
+            </center>
         </div>
     </div>
 
